css/style.css
* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.no-sup-msg {
    display: none;
}

img {
    width: 100%;
}

.wrapper {
    position: relative;
    max-width: 450px;
    margin: 10px auto;
    overflow: hidden;
}

@media all and (max-width: 500px) {
    .wrapper {
        display: none;
    }
}

.inner-wrapper {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    z-index: 99;
}

.dropzone {
    margin: auto;
    padding: 8px;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
    margin-top: 10%;
    background: url(../assets/images/grey-side-cans.png);
    background-size: cover;
    border-radius: 50%;
    height: 50px;
    width: 50px;
    position: relative;
    -webkit-transition: opacity 0.2s;
    transition: opacity 0.2s;
}

.dropzone.second-dropzone {
    left: 7px;
}

.drop-active {
    border-color: #aaa;
}

#outer-dropzone.drop-target {
    -webkit-box-shadow: 0px 0px 60px 5px #673368;
    box-shadow: 0px 0px 50px 5px #673368;
    -webkit-transition: all 0.5s;
    transition: all 0.5s;
}

.second-scene .drop-target {
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

.drag-drop {
    left: 0;
    right: -7px;
    margin: auto;
    top: 0;
    position: absolute;
    -webkit-transition: opacity 1s, width 0.3s;
    transition: opacity 1s, width 0.3s;
    width: 27%;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    z-index: 9999;
}

.mid-text {
    position: absolute;
    right: 0;
    left: 0;
    margin: auto;
    top: 52%;
    max-width: 170px;
    z-index: 99;
    -webkit-transition: all 1s;
    transition: all 1s;
}

.vids {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    position: absolute;
    z-index: 999999;
    bottom: 9px;
    left: 0;
}

.video {
    width: 50%;
}

.vids .sides {
    position: absolute;
    width: 50%;
    bottom: 0;
    z-index: 99999;
    -webkit-transition: opacity 0.1s;
    transition: opacity 0.1s;
    visibility: hidden;
    opacity: 0;
}

.dark-video {
    margin-right: -2px;
    margin-left: -1px;
}

.light-video {
    margin-left: 1px;
}

.lines {
    position: absolute;
    width: 100%;
    height: 100%;
}

.horizontal-top-line {
    position: absolute;
    top: -1px;
    right: 0;
    height: 2px;
    width: 100%;
    background: url(../new-assets/horizontal-border.png);
    background-size: cover;
    z-index: 99;
}

.right-line {
    position: absolute;
    height: 100%;
    right: 2px;
    z-index: 99;
    border-right: 1px solid #ddd;
}

.gray-out {
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
}

.fade-away {
    opacity: 0;
    -webkit-transition: all 0.35s;
    transition: all 0.35s;
}

.first-scene {
    position: absolute;
    top: 0%;
    z-index: 99999;
    -webkit-transition: all 1s linear;
    transition: all 1s linear;
    /*    display: none;*/
}

.second-scene {
    -webkit-transition: all 1s linear;
    transition: all 1s linear;
    position: absolute;
    z-index: 9999;
    top: 0%;
}

.second-scene-header {
    z-index: 9999999;
    position: relative;
    width: 101%;
    left: -1%;
}

.icons {
    position: absolute;
    text-align: center;
    top: 0;
    width: 100%;
    height: 100%;
}

.videos {
    width: 100%;
    position: absolute;
    z-index: -1;
}

.videos video {
    width: 102%;
    margin-left: -1.5%;
    margin-top: -13px;
    visibility: hidden;
    position: absolute;
    top: 0;
}

.videos video.chosen {
    visibility: visible;
}

.fly-up {
    top: -105%;
}

.buttons {
    position: absolute;
    top: 45%;
    text-align: center;
    width: 100%;
}

.buttons a {
    display: block;
    text-decoration: none;
    margin: 20px 5px;
    display: inline-block;
    width: 170px;
    background: #45A247;
    color: #fff;
    padding: 10px 5px;
    font-weight: 700;
    font-size: 18px;
}

.second-scene .draggable {
    width: 40px !important;
    margin-top: 12%;
}

.second-scene .inner-wrapper {
    width: 75%;
    left: 0;
    top: 0;
    margin: 2% auto 0;
    right: 0;
}

.second-scene .dropzone {
    background: none;
}

.second-scene .dropzone img {
    max-height: 40px;
    width: auto;
}

.system-dropzone {
    padding-right: 45px;
}

.third-scene {
    position: absolute;
    top: 99%;
    -webkit-transition: all 0.9s linear;
    transition: all 0.9s linear;
}

.third-scene.fly-up {
    top: 0%;
}

